# resilient-swarm-edge

./: Dockerfile  README.md  entrypoint.sh
src/swarm_core_bridge/: CMakeLists.txt  package.xml
src/swarm_core_bridge/src/: core_bridge_node.cpp
